@@ -63,7 +63,7 @@
 \begin_body
 
 \begin_layout Title
-gputils 0.15.0
+gputils 1.0.0
 \end_layout
 
 \begin_layout Author
@@ -71,7 +71,7 @@ James Bowman, Craig Franklin, and David Barnett
 \end_layout
 
 \begin_layout Date
-November 4, 2012
+December 9, 2012
 \end_layout
 
 \begin_layout Standard
